--- a/public/html/itemEditor.html
+++ b/public/html/itemEditor.html
@@ -62,14 +62,14 @@
                             :id="1"
                             @click="tabButtonClicked($el)"
                             type="button"
-                            class="relative z-20 inline-flex items-center justify-center w-full h-8 px-3 text-sm font-medium transition-all rounded-md cursor-pointer whitespace-nowrap focus:outline-none">
+                            class="relative z-20 inline-flex items-center justify-center w-full h-8 px-3 text-sm font-medium transition-all rounded-md cursor-pointer whitespace-nowrap">
                             Styles
                           </button>
                           <button
                             :id="2"
                             @click="tabButtonClicked($el)"
                             type="button"
-                            class="relative z-20 inline-flex items-center justify-center w-full h-8 px-3 text-sm font-medium transition-all rounded-md cursor-pointer whitespace-nowrap focus:outline-none">
+                            class="relative z-20 inline-flex items-center justify-center w-full h-8 px-3 text-sm font-medium transition-all rounded-md cursor-pointer whitespace-nowrap">
                             Samples
                           </button>
                           <div
