--- a/public/html/invoices/invoiceSection.html
+++ b/public/html/invoices/invoiceSection.html
@@ -18,8 +18,8 @@
       </h2>
     </div>
     <div class="flex justify-end">
-      <button @click="$store.invo.removeAllItems()" class="btn-sec">
-        <svg class="size-4 mr-1.5">
+      <button @click="$store.invo.removeAllItems()" class="modal-btn-prim">
+        <svg class="size-4">
           <use href="/icons/icons.svg#trash" />
         </svg>
         Reset
