--- a/public/index.html
+++ b/public/index.html
@@ -329,8 +329,9 @@
         </div>
       </div>
     </div>
-    <!-- 1) The store definitions  -->
+    <!-- 1) Store definitions  -->
     <script type="module" src="/Managers/tooltip.js"></script>
+    <script type="module" src="/store/fetcher.js"></script>
     <script type="module" src="/store/clientStore.js"></script>
     <script type="module" src="/store/itemStore.js"></script>
     <script type="module" src="/store/prices.js"></script>
